# Sentinal2

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  run_daily.bat  test_run.py
config/: config.yaml  metrics_seed.yaml  models.yaml
nais/: __init__.py  reference.py
pirs/: APPENDIX_A_ICD206.md  APPENDIX_B_COLLECTION.md  PIR_1.md  PIR_2.md  PIR_3.md  PIR_4.md  PIR_INDEX.md
prompts/: black_swan_alert.txt  cma.txt  collector.txt  group1_task_pir1.txt  group2_task_pir2.txt  group3_task_pir3.txt  group4_task_pir4.txt  group5_task_black_swan.txt  group6_task_big_question.txt  mission_directive.txt  planner.txt  processor.txt  reporter.txt  running_estimate.txt  summarizer_monthly.txt  summarizer_weekly.txt
reports/daily/: sentinel2_bsa_2026-03-29_BSA-2026-03-29.html  sentinel2_daily_2026-03-29.html
src/: __init__.py  pipeline.py
src/agents/: __init__.py  analysis_crew.py  black_swan_alert.py  cma.py  context_loader.py  definitions.py  disseminate.py  groups.py  pdf_renderer.py  planner.py  processor.py  reporter.py  running_estimate.py  summarizer.py
src/collectors/: __init__.py  gdelt_collector.py  gdelt_queries.py
src/collectors/metrics/: __init__.py  airspace.py  conflict.py  (+8 more)
src/db/: __init__.py  connection.py  migrate.py  schema.sql  seed.py
src/tools/: __init__.py  gdelt_doc.py  gdelt_geo.py  gdelt_gkg.py  mysql_query.py  rss_feed.py  telegram_monitor.py  web_scrape.py  web_search.py
src/utils/: __init__.py  config.py  google_auth.py  llm.py  metrics_scorer.py
templates/: black_swan_template.html  report_template.html
